--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
   "dependencies": {
     "express": "^4.13.4",
     "mysql": "^2.10.2"
+    "babel-preset-react": "^6.5.0",
+    "express": "^4.13.4",
+    "google-map-react": "^0.11.2",
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8",
+    "webpack": "^1.12.14"
   }
 }
